Fixed the recent projects positioning on mobile.

--- a/css/index.css
+++ b/css/index.css
@@ -386,44 +386,51 @@ footer .location p {
     max-width: 100%;
   }
 }
-.after-banner .recent-projects .project img {
+.after-banner .recent-projects .project .picAndTitle {
+  border: 1px solid red;
+  position: relative;
+}
+@media (max-width: 580px) {
+  .after-banner .recent-projects .project .picAndTitle {
+    width: 95%;
+  }
+}
+.after-banner .recent-projects .project .picAndTitle img {
   margin-top: 30px;
   width: 100%;
   z-index: -5;
 }
-.after-banner .recent-projects .project .project-title {
+.after-banner .recent-projects .project .picAndTitle .project-title {
   background: #D8D8D8;
   width: 37%;
   padding: 10px;
-  margin-top: -30px;
+  margin-top: -3%;
   right: 0;
-  margin-right: 15px;
   display: flex;
   justify-content: center;
   position: absolute;
   float: left;
-  z-index: 9;
+  z-index: 11;
 }
-.after-banner .recent-projects .project .project-title title {
+.after-banner .recent-projects .project .picAndTitle .project-title title {
   margin: 0;
   font-size: 30px;
 }
 @media (max-width: 580px) {
-  .after-banner .recent-projects .project .project-title {
-    top: -15px;
-    float: left;
-    margin-bottom: 0;
-    width: 375px;
+  .after-banner .recent-projects .project .picAndTitle .project-title {
+    bottom: -15px;
+    width: 95%;
+    right: 2%;
   }
 }
-.after-banner .recent-projects .project #outskirts-title {
+.after-banner .recent-projects .project .picAndTitle #outskirts-title {
   left: 15px;
 }
-.after-banner .recent-projects .project .img-phone {
+.after-banner .recent-projects .project .picAndTitle .img-phone {
   display: none;
 }
 @media (max-width: 580px) {
-  .after-banner .recent-projects .project .img-phone {
+  .after-banner .recent-projects .project .picAndTitle .img-phone {
     display: flex;
     width: 100%;
     height: auto;
