--- a/less/home.less
+++ b/less/home.less
@@ -74,46 +74,53 @@
 
   .recent-projects {
     .project{
-      img {
-        // border: 1px solid red;
-        margin-top: 30px;
-        width: 100%;
-        z-index: -5;
-      }//img
-      .project-title {
-        background:  #D8D8D8;
-        width: 37%;
-        padding: 10px;
-        margin-top: -30px;
-        right: 0;
-        margin-right: 15px;
-        display: flex;
-        justify-content: center;
-        position: absolute;
-        float: left;
-        z-index: 9;
-        title {
-          margin: 0;
-          font-size: 30px;
+      // position: relative;
+      .picAndTitle{
+        border: 1px solid red;
+        position: relative;
+        @media @phone {
+          width: 95%;
         }
-
-        @media @phone {
-          top: -15px;
-          // width: 500px;
+        img {
+          // border: 1px solid red;
+          margin-top: 30px;
+          width: 100%;
+          z-index: -5;
+          // position:inherit;
+        }//img
+        .project-title {
+          background:  #D8D8D8;
+          width: 37%;
+          padding: 10px;
+          margin-top: -3%;
+          right: 0;
+          display: flex;
+          justify-content: center;
+          position: absolute;
           float: left;
-          margin-bottom: 0;
-          width: 375px;
-          }//project-title media
-      }//project-title
-      #outskirts-title {
-        left: 15px;
+          z-index: 11;
+          title {
+            margin: 0;
+            font-size: 30px;
+          }
+
+          @media @phone {
+            bottom: -15px;
+            width: 95%;
+            right: 2%;
+            }//project-title media
+        }//project-title
+        #outskirts-title {
+          left: 15px;
+        }
+        .img-phone {
+          .hide;
+          @media @phone {
+            .show;
+            }//img-phone media
+        }//img-phonee
       }
-      .img-phone {
-        .hide;
-        @media @phone {
-          .show;
-          }//img-phone media
-      }//img-phonee
+
       .project-paragraphs{
         margin-left: 26%;
         margin-right: 26%;
